@@ -1,9 +1,8 @@
 package io.github.coffeecatrailway.hamncheese.compat.fabric.rei.common.displays;
 
 import dev.architectury.utils.NbtType;
-import io.github.coffeecatrailway.hamncheese.common.item.crafting.PopcornRecipe;
+import io.github.coffeecatrailway.hamncheese.common.item.crafting.ChoppingBoardRecipe;
 import io.github.coffeecatrailway.hamncheese.compat.fabric.rei.common.HNCREIPlugin;
-import io.github.coffeecatrailway.hamncheese.registry.HNCItems;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.display.Display;
 import me.shedaniel.rei.api.common.display.DisplaySerializer;
@@ -11,7 +10,6 @@ import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.ItemStack;
 
 import java.util.Collections;
 import java.util.List;
@@ -19,35 +17,23 @@ import java.util.Optional;
 
 /**
  * @author CoffeeCatRailway
- * Created: 4/06/2022
+ * Created: 19/06/2022
  */
-public class PopcornDisplay implements Display
+public class ChoppingBoardDisplay implements Display
 {
-    private final int popcorn;
     private final List<EntryIngredient> input;
     private final List<EntryIngredient> result;
     private final Optional<ResourceLocation> location;
 
-    public PopcornDisplay(PopcornRecipe recipe)
+    public ChoppingBoardDisplay(ChoppingBoardRecipe recipe)
     {
-        this(recipe.getPopcorn(), List.of(EntryIngredients.ofIngredient(recipe.getFlavouring()), EntryIngredients.ofIngredient(recipe.getSeasoning()), EntryIngredients.of(new ItemStack(HNCItems.POPCORN_BAG.get(), recipe.getResultItem().getCount()))),
-                Collections.singletonList(EntryIngredients.of(recipe.getResultItem())), Optional.ofNullable(recipe.getId()));
+        this(List.of(EntryIngredients.ofIngredient(recipe.getIngredient()), EntryIngredients.ofIngredient(recipe.getTool())), Collections.singletonList(EntryIngredients.of(recipe.getResultItem())), Optional.ofNullable(recipe.getId()));
     }
 
-    public PopcornDisplay(int popcorn, List<EntryIngredient> input, List<EntryIngredient> result, Optional<ResourceLocation> location)
-    {
-        this.popcorn = popcorn;
+    public ChoppingBoardDisplay(List<EntryIngredient> input, List<EntryIngredient> result, Optional<ResourceLocation> location) {
         this.input = input;
         this.result = result;
         this.location = location;
-
-//        if (this.input.get(0).isEmpty())
-//            this.input.remove(0);
-    }
-
-    public int getPopcorn()
-    {
-        return popcorn;
     }
 
     @Override
@@ -65,7 +51,7 @@ public class PopcornDisplay implements Display
     @Override
     public CategoryIdentifier<?> getCategoryIdentifier()
     {
-        return HNCREIPlugin.POPCORN;
+        return HNCREIPlugin.CHOPPING_BOARD;
     }
 
     @Override
@@ -74,7 +60,7 @@ public class PopcornDisplay implements Display
         return this.location;
     }
 
-    public static class Serializer implements DisplaySerializer<PopcornDisplay>
+    public static class Serializer implements DisplaySerializer<ChoppingBoardDisplay>
     {
         protected final Constructor constructor;
 
@@ -85,13 +71,12 @@ public class PopcornDisplay implements Display
 
         public static Serializer of()
         {
-            return new Serializer(PopcornDisplay::new);
+            return new Serializer(ChoppingBoardDisplay::new);
         }
 
         @Override
-        public CompoundTag save(CompoundTag tag, PopcornDisplay display)
+        public CompoundTag save(CompoundTag tag, ChoppingBoardDisplay display)
         {
-            tag.putInt("popcorn", display.popcorn);
             tag.put("input", EntryIngredients.save(display.getInputEntries()));
             tag.put("result", EntryIngredients.save(display.getOutputEntries()));
             display.getDisplayLocation().ifPresent(location -> tag.putString("location", location.toString()));
@@ -99,21 +84,20 @@ public class PopcornDisplay implements Display
         }
 
         @Override
-        public PopcornDisplay read(CompoundTag tag)
+        public ChoppingBoardDisplay read(CompoundTag tag)
         {
-            int popcorn = tag.getInt("popcorn");
             List<EntryIngredient> input = EntryIngredients.read(tag.getList("input", NbtType.LIST));
             List<EntryIngredient> result = EntryIngredients.read(tag.getList("result", NbtType.LIST));
             ResourceLocation location = null;
             if (tag.contains("location", NbtType.STRING))
                 location = new ResourceLocation(tag.getString("location"));
-            return constructor.construct(popcorn, input, result, Optional.ofNullable(location));
+            return constructor.construct(input, result, Optional.ofNullable(location));
         }
 
         @FunctionalInterface
         public interface Constructor
         {
-            PopcornDisplay construct(int popcorn, List<EntryIngredient> input, List<EntryIngredient> result, Optional<ResourceLocation> location);
+            ChoppingBoardDisplay construct(List<EntryIngredient> input, List<EntryIngredient> result, Optional<ResourceLocation> location);
         }
     }
 }
